Fix#spacing

--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -898,7 +898,7 @@ header {
 .heading-blog{
     width: 100%;
     top: 20%;
-    left: 20%;
+    left: 15%;
     position: fixed;
     z-index: -1;
 }
@@ -924,7 +924,7 @@ header {
     position: fixed;
     width: 100%;
     top: 20rem;
-    left: 65rem;
+    left: 61git rem;
 }
 
 .blog-svg img{
